--- a/src/locales/zh/guide.json
+++ b/src/locales/zh/guide.json
@@ -162,5 +162,31 @@
   "primus": {
     "installButton": "安装 Primus 扩展程序",
     "chromeStoreUrl": "https://chromewebstore.google.com/detail/primus/oeiomhmbaapihbilkfkhmlajkeegnjhe"
+  },
+  "partners": {
+    "title": "平台合作伙伴",
+    "subtitle": "ProofQuest 基于可信合作伙伴提供的前沿基础设施构建，实现无缝的 Web2 到 Web3 任务验证和区块链奖励。",
+    "primus": {
+      "tagline": "零知识证明基础设施",
+      "description": "Primus Labs 为 ProofQuest 的任务验证系统提供核心零知识证明基础设施。他们的前沿技术使用户能够在不泄露敏感个人数据的情况下证明已完成 Web2 任务。",
+      "keyFeatures": "核心功能：",
+      "feature1": "保护隐私的任务验证",
+      "feature2": "自动化证明生成",
+      "feature3": "跨平台集成",
+      "visitWebsite": "访问 Primus Labs"
+    },
+    "monad": {
+      "tagline": "高性能区块链",
+      "description": "Monad 是一个高性能、兼容 EVM 的区块链，为 ProofQuest 的奖励分发系统提供基础。专为速度和可扩展性而构建，Monad 为任务奖励提供即时、低成本的交易。",
+      "keyFeatures": "核心功能：",
+      "feature1": "10,000+ TPS 吞吐量",
+      "feature2": "亚秒级终结性",
+      "feature3": "EVM 兼容性",
+      "visitWebsite": "访问 Monad"
+    },
+    "dependency": {
+      "title": "平台依赖关系",
+      "description": "ProofQuest 的功能依赖于 Primus Labs 的零知识证明生成和验证，以及 Monad 区块链的安全、快速奖励分发。这些合作伙伴关系确保用户能够在隐私保护下完成 Web2 任务，同时高效获得 Web3 奖励。"
+    }
   }
 }
