adjust trending quest ui

--- a/src/locales/en/quests.json
+++ b/src/locales/en/quests.json
@@ -83,5 +83,59 @@
     "defi": "DeFi",
     "gaming": "Gaming",
     "education": "Education"
+  },
+  "zkProof": {
+    "startingProof": "Starting ZK proof...",
+    "signatureComplete": "ZK Signature Complete",
+    "signatureObtained": "ZK signature obtained, starting proof generation.",
+    "signatureFailed": "Signature Failed",
+    "zkSignatureFailed": "ZK signature failed, please try again.",
+    "generatingProof": "Generating proof...",
+    "proofGenerationComplete": "Proof Generation Complete",
+    "zkProofGenerated": "ZK proof generated, starting verification.",
+    "generationFailed": "Generation Failed",
+    "proofGenerationFailed": "Proof generation failed, please try again.",
+    "verifyingProof": "Verifying proof...",
+    "proofVerificationPassed": "Proof Verification Passed",
+    "proofVerificationSuccess": "Proof verification successful, ready to claim reward.",
+    "verificationFailed": "Verification Failed",
+    "proofVerificationFailed": "Proof verification failed, please try again.",
+    "claimingReward": "Claiming reward...",
+    "connectionFailed": "Connection Failed",
+    "walletConnectionFailed": "Wallet connection failed, please try again.",
+    "transactionSubmitted": "Transaction Submitted",
+    "transactionSubmittedToBlockchain": "Transaction submitted to blockchain, waiting for confirmation... Transaction hash: ",
+    "waitingForConfirmation": "Waiting for confirmation...",
+    "rewardClaimSuccess": "Reward Claim Success!",
+    "congratulations": "Congratulations! You have successfully claimed ",
+    "rewardTransactionConfirmed": " reward. Transaction confirmed!",
+    "transactionFailedOrReverted": "Transaction failed or reverted",
+    "checkingTransactionStatus": "Checking transaction status error:",
+    "transactionConfirmationTimeout": "Transaction Confirmation Timeout",
+    "transactionMayStillProcessing": "Transaction may still be processing, please check your balance later.",
+    "claimFailed": "Claim Failed",
+    "twitterAlreadyUsed": "This tweet has been used by another user, please use a different tweet link",
+    "userAlreadyParticipated": "You have already participated in this quest and cannot participate again",
+    "questNotActive": "Quest is currently unavailable or has ended",
+    "questFull": "Quest participation limit reached",
+    "invalidProof": "Invalid proof, please regenerate proof",
+    "proofExpired": "Proof has expired, please regenerate proof",
+    "invalidAttestation": "Invalid proof data",
+    "insufficientFunds": "Contract balance insufficient, please contact administrator",
+    "questEnded": "Quest has ended, cannot continue participating",
+    "invalidQuestId": "Invalid quest ID",
+    "userDeniedTransaction": "User canceled transaction",
+    "insufficientAccountFunds": "Insufficient account balance, please ensure you have enough MON to pay gas fees",
+    "gasFeeInsufficient": "Insufficient gas fee or gas limit too low",
+    "nonceError": "Transaction nonce error, please try again",
+    "transactionReverted": "Transaction reverted, please check transaction conditions",
+    "rewardClaimFailedRetry": "Reward claim failed, please try again",
+    "primusPluginRequired": "Primus Plugin Required",
+    "installPrimusPlugin": "Please install the Primus Chrome plugin first to participate in this quest",
+    "installPlugin": "Install Plugin",
+    "retry": "Retry",
+    "zktlsInitializationFailed": "ZKTLS Initialization Failed",
+    "cannotInitializeZkSystem": "Cannot initialize zero-knowledge proof system, please refresh and try again",
+    "rewardClaimFailedGeneric": "Reward claim failed, please try again"
   }
 }
