--- a/src/locales/zh/quests.json
+++ b/src/locales/zh/quests.json
@@ -83,5 +83,59 @@
     "defi": "DeFi",
     "gaming": "游戏",
     "education": "教育"
+  },
+  "zkProof": {
+    "startingProof": "启动 ZK 证明中...",
+    "signatureComplete": "ZK 签名完成",
+    "signatureObtained": "已获取 ZK 签名，开始生成证明。",
+    "signatureFailed": "签名失败",
+    "zkSignatureFailed": "ZK 签名失败，请重试。",
+    "generatingProof": "生成证明中...",
+    "proofGenerationComplete": "证明生成完成",
+    "zkProofGenerated": "ZK 证明已生成，开始验证。",
+    "generationFailed": "生成失败",
+    "proofGenerationFailed": "证明生成失败，请重试。",
+    "verifyingProof": "验证证明中...",
+    "proofVerificationPassed": "证明验证通过",
+    "proofVerificationSuccess": "证明验证成功，可以提交领取奖励。",
+    "verificationFailed": "验证失败",
+    "proofVerificationFailed": "证明验证失败，请重试。",
+    "claimingReward": "领取奖励中...",
+    "connectionFailed": "连接失败",
+    "walletConnectionFailed": "钱包连接失败，请重试。",
+    "transactionSubmitted": "交易已提交",
+    "transactionSubmittedToBlockchain": "交易已提交到区块链，等待确认中... 交易哈希: ",
+    "waitingForConfirmation": "等待交易确认...",
+    "rewardClaimSuccess": "奖励领取成功！",
+    "congratulations": "恭喜！您已成功领取 ",
+    "rewardTransactionConfirmed": " 奖励。交易已确认！",
+    "transactionFailedOrReverted": "交易失败或被回滚",
+    "checkingTransactionStatus": "检查交易状态时出错:",
+    "transactionConfirmationTimeout": "交易确认超时",
+    "transactionMayStillProcessing": "交易可能仍在处理中，请稍后检查您的余额。",
+    "claimFailed": "领取失败",
+    "twitterAlreadyUsed": "该推特已被其他用户使用，请使用不同的推特链接",
+    "userAlreadyParticipated": "您已经参与过此任务，无法重复参与",
+    "questNotActive": "任务当前不可用或已结束",
+    "questFull": "任务参与人数已满",
+    "invalidProof": "证明无效，请重新生成证明",
+    "proofExpired": "证明已过期，请重新生成证明",
+    "invalidAttestation": "无效的证明数据",
+    "insufficientFunds": "合约余额不足，请联系管理员",
+    "questEnded": "任务已结束，无法继续参与",
+    "invalidQuestId": "无效的任务ID",
+    "userDeniedTransaction": "用户取消了交易",
+    "insufficientAccountFunds": "账户余额不足，请确保有足够的 MON 支付 Gas 费用",
+    "gasFeeInsufficient": "Gas 费用不足或 Gas 限制过低",
+    "nonceError": "交易 nonce 错误，请重试",
+    "transactionReverted": "交易被回滚，请检查交易条件",
+    "rewardClaimFailedRetry": "奖励领取失败，请重试",
+    "primusPluginRequired": "需要安装 Primus 插件",
+    "installPrimusPlugin": "请先安装 Primus Chrome 插件才能参与任务",
+    "installPlugin": "安装插件",
+    "retry": "重试",
+    "zktlsInitializationFailed": "ZKTLS 初始化失败",
+    "cannotInitializeZkSystem": "无法初始化零知识证明系统，请刷新页面重试",
+    "rewardClaimFailedGeneric": "奖励领取失败，请重试"
   }
 }
